Ex6/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-shop
  namespace: ex6
spec:
  stripPrefix:
    prefixes:
      - /cart
      - /catalog
