Ex6/shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-deployment
  namespace: ex6
  labels:
    app: shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
