Ex6/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: ex6
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
