Ex6/shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-service
  namespace: ex6
spec:
  type: ClusterIP
  selector:
    app: shop
  ports:
    - port: 80
      targetPort: 80
