Ex6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex6-ingress
  namespace: ex6
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ex6-strip-shop@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: shop.local
      http:
        paths:
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: shop-service
                port:
                  number: 80
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: shop-service
                port:
                  number: 80
    - host: admin.shop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
